--- a/config/app.yml
+++ b/config/app.yml
@@ -10,6 +10,10 @@ production:
   app_redis_url: 'redis://localhost:6380'
   resque_redis_url: 'redis://localhost:6381'
 
+staging:
+  log_level: 'DEBUG'
+  hyperloglog_precision: 10
+
 test:
   log_level: 'WARN'
   hyperloglog_precision: 10
