--- a/config/app.yml
+++ b/config/app.yml
@@ -2,6 +2,7 @@ development:
   log_level: 'DEBUG'
   hyperloglog_precision: 10
   app_redis_url: 'redis://localhost:6379/0'
+  unlink_app_redis: true
   resque_redis_url: 'redis://localhost:6379/1'
 
 production:
